--- a/index.html
+++ b/index.html
@@ -116,26 +116,26 @@
    <div class="a2">
     <img id="s2" src="pictures/img1.png" alt="">
    </div>
-    </div>
+    </div> 
 
 
 
     <!-- this is container second coding so let's go ..... -->
 
-
+<!-- 
     <div class="cont1">
       <h1 id="s3">A connection for all</h1>
       <div class="a3">
    <p>Bharti Airtel Limited is a leading telecommunication company globally. Headquartered in New India, we are the most trusted provider of ICT services with a global network across the USA, Europe, Africa, Middle East, Asia-Pacific, India, and SAARC regions. Airtel Telecommunications ranks amongst the top 3 mobile service providers around the world (as per subscribers) </p><br><br>
    <p>Through the diverse product portfolio and strategically located submarine cables and satellite network running across 365,000+ RKMs in 50 countries and 5 continents, we are pushing the boundaries in digital service delivery with a key focus on enhanced end-user experience, round-the-clock infrastructure availability, and superior service quality.</p>
       </div>
-    </div>
+    </div> -->
 
 
 
     <!-- start from here new container coding start so let's go and start ... -->
 
-
+<!-- 
     <div class="cont2">
         <div class="a4">
                 <h1>17 countries</h1>
@@ -153,41 +153,41 @@
             <h1 id="counting">30,568</h1>
             <h3>+RKMs in 10 countries & 2 contenitents</h3>
         </div>
-    </div>
+    </div> -->
 
 
 
 <!-- this is new container coding so keep going on and this is cont3 .....world graph div... -->
 
-
+<!-- 
     <div class="cont3" id="worldMap">
         <img class="cont3" src="pictures/graph.svg" alt="">
-    </div>
+    </div> -->
 
 
 
     <!-- this is cont4 div coding so let's start it and keep on .. -->
     
-    <div class="cont4">
-        <h1>A large spectrum of products offerings</h1>
-  <div class="a6">
-    <img id="s7" src="pictures/girl.png" alt="">
-  </div>
-  <div class="a6">
-    <img id="s5" src="pictures/icon.png" alt="">
-    <h1>Mobile services</h1>
-    <h2>2G, 3G, 4G services, with 5G services</h2>
-    <h2> network across India</h3>
-        <a href=""><button id="cot4" >Learn More</button></a>
-  </div>
+      <!-- <div class="cont4">
+          <h1>A large spectrum of products offerings</h1>
+    <div class="a6">
+      <img id="s7" src="pictures/girl.png" alt="">
     </div>
+    <div class="a6">
+      <img id="s5" src="pictures/icon.png" alt="">
+      <h1>Mobile services</h1>
+      <h2>2G, 3G, 4G services, with 5G services</h2>
+      <h2> network across India</h3>
+          <a href=""><button id="cot4" >Learn More</button></a>
+    </div>
+      </div> -->
 
 
 
     <!-- this is cont coding so let's do it and start now ........ -->
 
 
-    <div class="cont5">
+    <!-- <div class="cont5">
      <div class="a9">
         <img id="s11" src="pictures/wifi icon.png" alt="">
         <h1>Home Service</h1>
@@ -197,12 +197,12 @@
      <div class="a9">
         <img id="s12" src="pictures/wifi img.png" alt="">
      </div>
-    </div>
+    </div> -->
 
 
 
     <!-- this is cont6 coding so let's do  it ......-->
-
+<!-- 
 
     <div class="cont6">
         <div class="a15">
@@ -213,12 +213,12 @@
             <p>With a diverse range of services, we are a key player in the Digital TV Services industry offering both High and Standard resolution TV Services with 635 channels including 80 HD channels, 5 international channels, and 3 interactive services.</p>
             <a href=""><button>Learn More</button></a>
         </div>
-    </div>
+    </div> -->
 
 
 
 <!-- almost footer to second up div coding start here s keep on it and do it smothly ........ -->
-
+<!-- 
 
     <div class="footer">
      <div class="a21">
@@ -235,7 +235,7 @@
 <div class="foot">
 
 <div class="a22">
-    <h1 id="a22" >Fing More About Airtel</h1>
+    <h1 id="a22" >Find More About Airtel</h1>
 </div>
 
 <div class="a22">
@@ -258,10 +258,10 @@
     <a href=""><h2>Ombuds Office</h2></a>
 </div>
 
-</div>
+</div> -->
 
 <!-- starting from here some new features so let's go and start now  -->
-
+<!-- 
 <div class="newfeatures">
 
   <div class="card">
@@ -280,12 +280,12 @@
 
 
 
-</div>
+</div> -->
 
 
 <!-- start from here footer coding so let's go and start it ...... -->
 
-
+<!-- 
 <div class="mainfoot">
     <div class="a25">
         <a href="">Airtel Blackbill Payment</a>
@@ -351,7 +351,7 @@
   </div>
 
   
-</div>
+</div> -->
 </body>
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
