--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 
 
     <div class="cont">
-   <div class="a2">
+   <div class="halfofcont">
     <p id="s1">We are obsessed with delivering exceptional experiences to you.</p>
    </div>
-   <div class="a2">
+   <div class="halfofcont">
     <img id="s2" src="pictures/img1.png" alt="">
    </div>
     </div> 
@@ -122,14 +122,13 @@
 
     <!-- this is container second coding so let's go ..... -->
 
-<!-- 
     <div class="cont1">
       <h1 id="s3">A connection for all</h1>
       <div class="a3">
    <p>Bharti Airtel Limited is a leading telecommunication company globally. Headquartered in New India, we are the most trusted provider of ICT services with a global network across the USA, Europe, Africa, Middle East, Asia-Pacific, India, and SAARC regions. Airtel Telecommunications ranks amongst the top 3 mobile service providers around the world (as per subscribers) </p><br><br>
    <p>Through the diverse product portfolio and strategically located submarine cables and satellite network running across 365,000+ RKMs in 50 countries and 5 continents, we are pushing the boundaries in digital service delivery with a key focus on enhanced end-user experience, round-the-clock infrastructure availability, and superior service quality.</p>
       </div>
-    </div> -->
+    </div> 
 
 
 
